Fix DOC-4122: In tables that are too wide, the right side can't be selected

--- a/antora-theme/css/outscale.css
+++ b/antora-theme/css/outscale.css
@@ -203,6 +203,7 @@ html {
   .doc {
     color: var(--outscale-blue);
     max-width: 100%;
+    z-index: 1;
   }
 }
 
